# Semantic-DLP

./: .env.example  .gitignore  README.md  pyproject.toml
src/sdlp/: __init__.py  ids.py  instrument.py  io.py  report.py  schemas.py
src/sdlp/chunking/: __init__.py  core.py
src/sdlp/datasets/: __init__.py  casimir.py  keyphrase.py  par3.py  re3.py
src/sdlp/detection/: __init__.py  core.py
src/sdlp/embedding/: __init__.py  cache.py  spec.py  st.py
src/sdlp/index/: __init__.py  faiss_hnsw.py
src/sdlp/methods/: __init__.py  bm25.py  colbert.py  docvec.py  embedding_pooled.py  longctx.py  minhash_lsh.py  runner.py  ssdeep.py
src/sdlp/metrics/: __init__.py  core.py
src/sdlp/pipeline/: __init__.py  config.py  run.py
src/sdlp/retrieval/: __init__.py  core.py
src/sdlp/splits/: __init__.py  core.py
src/sdlp/variation/: __init__.py  dipper.py  eda.py  gpt.py  quality.py  semantic.py
src/sdlp/voting/: __init__.py  core.py
