[project]
name = "final-dlp"
version = "0.1.0"
description = "Semantic DLP — 임베딩 기반 기밀문서 유출 탐지"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "sentence-transformers>=3.0",
    "torch>=2.7",
    "faiss-cpu>=1.9",
    "scikit-learn>=1.5",
    "datasets>=5.0.0",
    "nltk>=3.9.4",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "bm25s>=0.3.9",
    "pystemmer>=3.1.0",
    "matplotlib>=3.11.0",
    "ppdeep>=20260221",
    "tqdm>=4.68.3",
    "datasketch>=2.0.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "ipykernel>=6.29", "jupyter>=1.1"]
dipper = [
    "bitsandbytes>=0.43",
]

[tool.uv]
allow-insecure-host = ["pypi.org", "files.pythonhosted.org", "download.pytorch.org"]

# PyTorch CUDA 12.6 wheel (driver 560.94 = CUDA 12.6, RTX 4080). 
[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdlp"]
